# Multi-camera-Vehicle-Tracking-System

./: .gitignore  CMakeLists.txt  Ctracker.cpp  Ctracker.hpp  HungarianAlg.cpp  HungarianAlg.hpp  Kalman.cpp  Kalman.hpp  README.md  avi.cpp  avi.hpp  bsgmm.cpp  bsgmm.hpp  ctracker.cpp  ctracker.hpp  gmm.cpp  gmmOpencv.cpp  gmmTracking.cpp  gnuplot-iostream.h  gui.py  header.hpp  hungarianAlg.cpp  hungarianAlg.hpp  kalman.cpp  kalman.hpp  multiTracker.cpp  multiTracker.hpp  path.ini  project.cpp  ptrans.cpp  ptrans.hpp  rect.cpp  rect.hpp  resizer.cpp  roadmap.cpp  runall.sh  test.cpp  testHungarian.cpp  testptrans-711.sh  testptrans-kymco.sh  (+3 more)
Affine Transformations/: CMakeLists.txt  main.cpp
AffineTransformations/: main.cpp
Back-Subtract-GMM/: CMakeCache.txt  CMakeLists.txt  Makefile  bsgmm.cpp  bsgmm.hpp  cmake_install.cmake  final_BG.cpp  header.hpp  main.cpp  rect.cpp  rect.hpp
BackgroundSubtractor/: CMakeLists.txt  backgroundSubtractor.cpp
PerspectiveTransform/: CMakeLists.txt  dlsr.sh  main.cpp  test711.sh  testkymco.sh
calcHist/: CMakeLists.txt  main.cpp
hook/pre-commit.d/: astyle.hook
project/: CMakeLists.txt  bsgmm.hpp  main.cpp
zebra/: CMakeLists.txt  main.cpp  standard.hpp  test.sh
