cmake_minimum_required(VERSION 2.8)
project( BSGMM )
find_package( OpenCV REQUIRED )
add_executable( BSGMM main.cpp bsgmm.cpp rect.cpp )
target_link_libraries( BSGMM ${OpenCV_LIBS} -lutil -lboost_iostreams -lboost_system -lboost_filesystem )
SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
